# auxv-pid

./: .gitignore  Cargo.toml  LICENSE-MIT.txt  README.md  RELEASE-NOTES.md  Vagrantfile  build.rs
c/: getauxval-wrapper.c
examples/: elf_stack_broken_modified_environ.rs  elf_stack_show_auxv.rs  elf_stack_show_hwcap.rs  getauxval_show_hwcap.rs  procfs_show_auxv.rs  procfs_show_hwcap.rs  show_auxv.rs
src/: getauxval.rs  lib.rs  procfs.rs  stack.rs
tests/: getauxval_tests.rs  native_getauxval_tests.rs  procfs_tests.rs  stack_tests.rs
