[package]
name = "auxv"
version = "0.2.0"

authors = ["Marshall Pierce <marshall@mpierce.org>"]
description = "Access the ELF auxiliary vector (aka auxv or auxval)."
documentation = "https://docs.rs/auxv/"
homepage = "https://bitbucket.org/marshallpierce/rust-auxv"
repository = "https://bitbucket.org/marshallpierce/rust-auxv"
readme = "README.md"
keywords = ["linux", "unix", "elf", "auxiliary", "vector", "auxv", "auxval"]
license-file = "LICENSE.txt"

[dev-dependencies]
byteorder = "1.0.0"
libc = "0.2.19"
