[package]
name = "auxv"
version = "0.3.0"

authors = ["Marshall Pierce <marshall@mpierce.org>"]
description = "Access the ELF auxiliary vector (aka auxv or auxval)."
documentation = "https://docs.rs/auxv/"
homepage = "https://bitbucket.org/marshallpierce/rust-auxv"
repository = "https://bitbucket.org/marshallpierce/rust-auxv"
readme = "README.md"
keywords = ["linux", "unix", "elf", "stack", "auxiliary", "vector", "auxv", "auxval"]
license-file = "LICENSE.txt"
build = "build.rs"

[dependencies]
byteorder = "1.0.0"

[dev-dependencies]
libc = "0.2.19"

[build-dependencies]
gcc = "0.3.41"
